Fix picotls to support boringssl when openssl is not installed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,7 +120,10 @@ SET(TEST_EXES test-minicrypto.t)
 SET(PTLSBENCH_LIBS
     picotls-minicrypto picotls-core)
 
-FIND_PACKAGE(OpenSSL)
+IF (NOT BORINGSSL_LIBDIR)
+    FIND_PACKAGE(OpenSSL)
+ENDIF()
+
 BORINGSSL_ADJUST()
 
 IF (OPENSSL_FOUND AND NOT (OPENSSL_VERSION VERSION_LESS "1.0.1"))
