Disable Brotli when using boringssl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,8 +73,10 @@ IF (WITH_DTRACE)
     ENDIF ()
 ENDIF ()
 
-PKG_CHECK_MODULES(BROTLI_DEC libbrotlidec)
-PKG_CHECK_MODULES(BROTLI_ENC libbrotlienc)
+IF (BORINGSSL_LIBRARIES)
+    PKG_CHECK_MODULES(BROTLI_DEC libbrotlidec)
+    PKG_CHECK_MODULES(BROTLI_ENC libbrotlienc)
+ENDIF()
 IF (BROTLI_DEC_FOUND AND BROTLI_ENC_FOUND)
     INCLUDE_DIRECTORIES(${BROTLI_DEC_INCLUDE_DIRS} ${BROTLI_ENC_INCLUDE_DIRS})
     SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DPICOTLS_USE_BROTLI=1")
