Disable Brotli when using boringssl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,7 @@ IF (WITH_DTRACE)
     ENDIF ()
 ENDIF ()
 
-IF (BORINGSSL_LIBRARIES)
+IF (NOT BORINGSSL_LIBRARIES)
     PKG_CHECK_MODULES(BROTLI_DEC libbrotlidec)
     PKG_CHECK_MODULES(BROTLI_ENC libbrotlienc)
 ENDIF()
